[tool.poetry]
name = "nacf"
version = "0.1.0"
description = "Nasy Crawler Framework -- Never had such a pure crawler."
authors = ["Nasy <nasyxx+nacf@gmail.com>"]
license = "GPL-3.0+"
keywords = ["crawler"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities"
]
readme = "README.md"
include = ["CHANGELOG", "poetry.lock", "README.org", "README.html"]
repository = "https://github.com/nasyxx/nacf"

[tool.poetry.dependencies]
python = "^3.7"
requests_html = "^0.9.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
hypothesis = "^3.84"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
balanced_wrapping = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

import_heading_typdef = "Type Definition"
known_typdef = ["typing", "typdefs"]

import_heading_stdlib = "Standard Library"

import_heading_pandas = "Mathematic Packages"
known_pandas = ["pandas", "numpy", "scipy"]

import_heading_web = "Web Packages"
known_web = ["requests", "requests_html", "bs4"]

import_heading_aio = "Async Packages"
known_aio = ["aiohttp", "aiofile"]

import_heading_clt = "Command Line Tools"
known_clt = ["click", "cleo", "fire"]

import_heading_tpkg = "This Package"
known_tpkg = ["napy"]

import_heading_thirdparty = "Other Packages"

import_heading_localfolder = "Local Packages"

sections = ["FUTURE", "TYPDEF", "STDLIB", "PANDAS", "WEB", "AIO", "CLT", "THIRDPARTY", "FIRSTPARTY", "TPKG", "LOCALFOLDER"]

length_sort = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
